welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:12: error: illegal start of simple expression
	if ((a==b) && (=b=c)) {
                       ^greenTicket:16: error: ')' expected but '}' found.
}
^